--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/sakshikhairnar1794" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
       </div>
-      <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+      <a href="sakshikhairnar_resume.pdf" download class="btn btn2">Download Resume</a>
     </div>
     <div class="contact-right">
       <form name="submit-to-google-sheet">
